--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
     <section id="portfolio">
       <article class="project">
         <h2>Professional Portfolio Website</h2>
-        <img src="/assets/HomePage.png" alt="Professional Portfolio Website">
+        <img src="/assets/Home.png" alt="Professional Portfolio Website">
         <p>Utilised fundamental frontend languages to build a portfolio that showcases my personal journey into Full Stack Development, 
             highlighting my current goals and the skills I've developed along the way. This project served as a practical learning experience, 
             reinforcing my understanding of responsive design and accessibility.</p>
